--- a/platformio.ini
+++ b/platformio.ini
@@ -1,62 +1,23 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-
-; ================================================
-; See docs for configuration options and examples:
-; https://docs.slimevr.dev/configuring-project.html#configuring-platformioini
-; ================================================
+[platformio]
+default_envs = lolin32_lite
 
 [env]
-lib_deps=
-  https://github.com/SlimeVR/CmdParser.git
+lib_deps = https://github.com/SlimeVR/CmdParser.git
 monitor_speed = 115200
+monitor_echo = yes
+monitor_filters = colorize
 framework = arduino
-build_flags =
-;If you want to set hardcoded WiFi SSID and password, uncomment and edit the lines below
-;To uncomment, only remove ";" and leave the two spaces in front of the tags
-; '" - quotes are necessary!
-;  -DWIFI_CREDS_SSID='"SSID"'
-;  -DWIFI_CREDS_PASSWD='"PASSWORD"'
-
-; Enable -O2 GCC optimization
-  -O2
-
+build_flags = -O2
 build_unflags = -Os
+;check_skip_packages = true
 
-; If you want to enable OTA Updates, uncomment and set OTA password here and in credentials.h
-; You can set upload_port to device's ip after it's set up for the first time
-; Use the same password in SlimeVR Server to let it OTA Update the device
-;upload_protocol = espota
-;upload_port = 192.168.1.49
-;upload_flags =
-;  --auth=SlimeVR-OTA
-
-; Settings for different boards
-
-[env:esp12e]
-platform = espressif8266
-board = esp12e
-; Comment out this line below if you have any trouble uploading the firmware
-; and if it has a CP2102 on it (a square chip next to the usb port): change to 3000000 (3 million) for even faster upload speed
-upload_speed = 921600
-
-; Uncomment below if you want to build for ESP-01
-;[env:esp01_1m]
-;platform = espressif8266
-;board = esp01_1m
-
-; Uncomment below if you want to build for esp32
-; Check your board name at https://docs.platformio.org/en/latest/platforms/espressif32.html#boards
-; [env:esp32]
-; lib_deps =
-;   ${env.lib_deps}
-;   lorol/LittleFS_esp32 @ 1.0.6
-; platform = espressif32 @ 3.5.0
-; board = esp32dev
-; Comment out this line below if you have any trouble uploading the firmware - and if it has a CP2102 on it (a square chip next to the usb port): change to 3000000 (3 million) for even faster upload speed
-; upload_speed = 921600
+[env:lolin32_lite]
+platform = espressif32 @ 3.5.0
+board = lolin32_lite
+upload_speed = 256000
+lib_deps = 
+	${env.lib_deps}
+	lorol/LittleFS_esp32 @ ^1.0.6
+;	alexgyver/GyverOLED@^1.3.2
+;board_build.filesystem = littlefs
+;board_build.partitions = min_spiffs.csv
