--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,19 @@ lib_deps =
 ;	alexgyver/GyverOLED@^1.3.2
 ;board_build.filesystem = littlefs
 ;board_build.partitions = min_spiffs.csv
+
+[env:ota]
+platform = espressif32 @ 3.5.0
+board = lolin32_lite
+upload_speed = 256000
+lib_deps = 
+	${env.lib_deps}
+	lorol/LittleFS_esp32 @ ^1.0.6
+;	alexgyver/GyverOLED@^1.3.2
+;board_build.filesystem = littlefs
+;board_build.partitions = min_spiffs.csv
+
+upload_protocol = espota
+upload_port = 192.168.86.44
+upload_flags =
+  --auth=SlimeVR-OTAfsas
